# Beta-SLAM

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: CompilerSettings.cmake
include/bslam/io/carmen/: CarmenGtReader.h  CarmenProcessor.h  CarmenProcessor.hpp  CarmenReader.h
include/bslam/maps/: AccessState.h  BayesMap2D.h  BetaMap2D.h  CellSelectionFunction.h  Map.h  Map.hpp  Map2D.h  MapCache.h  MapCache.hpp
include/bslam/maps/cells/: BayesCell.h  BayesCell.hpp  BetaCell.h  BetaCell.hpp  CellBase.h  PointAccumulator.h  PointAccumulator.hpp
include/bslam/maps/storages/: Array2D.h  Array2D.hpp  HArray2D.h  HStorage.h  HStorage.hpp  HStorageHelper.h  HStorageHelper.hpp  HashMap.h  HashMap.hpp
include/bslam/models/: MotionModel.h  MotionModel2D.h  MotionModel2D.hpp  SensorModel.h  SensorModelBayes.h  SensorModelBayes.hpp  SensorModelBeta.h  SensorModelBeta.hpp
include/bslam/registration/: MapScanMatcher.h  MapScanMatcher.hpp
include/bslam/slam/: BayesFastSLAM2D.h  BetaFastSLAM2D.h  FastSLAM.h  FastSLAM.hpp  Particle.h  Particle.hpp  SLAMTypes.h  TrajectoryNode.h  TrajectoryNode.hpp
include/bslam/utils/: ConditionalMutex.h  ConditionalMutex.hpp  Config.h  Config.hpp  Convenience.h  Factorial.h  Log.h  Scan.h  Stopwatch.h  Stopwatch.hpp  Version.h  aligned_allocate_shared.h  aligned_boost_unordered_map.h  aligned_list.h  aligned_map.h  aligned_unordered_map.h  aligned_unordered_set.h  aligned_vector.h  raw_ptr.h  shared_unique_ptr.h  shared_unique_ptr.hpp
include/bslam/utils/geometry/: Circle.h  Circle.hpp  Line.h  Line.hpp  PclPoint.h  Point.h  PointComp.h  PointCrossIterator.h  PointCrossIterator.hpp  PointIterator.h  PointIterator.hpp  PoseBase.h  PoseBase.hpp  PoseSE2.h  PoseSE2.hpp  RotationSO2.h  RotationSO2.hpp
include/bslam/utils/uncertainty/: BetaDistribution.h  BetaDistribution.hpp  CovarianceEllipse.h  CovarianceEllipse.hpp  CovarianceEllipsoid.h  CovarianceEllipsoid.hpp  NormalDistribution.h  NormalDistribution.hpp  NormalDistributionEstimator.h  NormalDistributionEstimator.hpp
include/bslam/viz/: CellColor.h  CellColor.hpp  Color.h  Color.hpp  MapView2D.h  MapView2D.hpp  NeffView.h
src/: CMakeLists.txt
src/io/: CMakeLists.txt
src/io/carmen/: BSlamCarmenGui.cpp  CMakeLists.txt  CarmenGtReader.cpp  CarmenReader.cpp
src/slam/: BayesFastSLAM2D.cpp  BetaFastSLAM2D.cpp  CMakeLists.txt
src/utils/: CMakeLists.txt  Config.cpp  Convenience.cpp  Version.cpp  VersionInfo.h
src/viz/: CMakeLists.txt  MapView2D.cpp  NeffView.cpp
